# sure

./: .env  .gitignore  manage.py  package-lock.json  pyproject.toml  requirements.txt  sonar-project.properties
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: analyze.yml  build-deploy.yml  test-build-deploy.yml
agent_runs/masked-firewall-290/: vulnerabilities.csv
core/: admin.py  api.py  auth.py  celery.py  middleware.py  settings.py  urls.py
docker/: Dockerfile
frontend/: client_text_slugs.csv  components.d.ts  env.d.ts  eslint.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: LICENSES.txt  LICENSES_BACKEND.txt
frontend/src/: App.vue  main.ts
guard/: admin.py  apps.py  guard.py  middleware.py  models.py  tasks.py
guard/migrations/: 0001_initial.py  0002_alter_blockedidentifier_identifier.py  0003_protectedendpoint_notification_email.py
labor/: admin.py  api.py  forms.py  models.py  schema.py  service.py  tasks.py  team_w.py
labor/data/: Output Hl7 Beispiel.txt
labor/migrations/: 0001_initial.py  0002_ftpconnection.py  0003_alter_ftpconnection_options_alter_laboratory_options_and_more.py  0004_remove_labordercounter_locations_and_more.py  0005_historicalftpconnection_historicallaborder_and_more.py  0006_historicallaborder_profiles_and_more.py  0007_remove_historicaltestprofile_material_and_more.py  0008_testprofile_unique_test_profile_per_laboratory_and_test_kind.py  0009_historicallaborder_materials_laborder_materials.py  0010_historicallaborder_note_laborder_note_apiconnection_and_more.py
sms/: admin.py  models.py  service.py  tasks.py
sms/migrations/: 0001_initial.py  0002_smsmessage_tenant.py
sure/: admin.py  api.py  apps.py  cases.py  client_service.py  export.py  forms.py  health_test.py  labor.py  lang.py  models.py  questionnaire.py  reminder.py  schema.py  tasks.py  translation.py  twilio.py  urls.py  validators.py  views.py
sure/fixtures/: questionnaire.json
sure/migrations/: 0001_initial.py  0002_alter_contact_email_alter_contact_id.py  0003_alter_connection_client.py  0004_alter_connection_client.py  0005_clientquestion_consultantquestion_questionaire_and_more.py  0006_clientquestion_do_not_show_directly_and_more.py  0007_alter_clientoption_options_and_more.py  0008_testbundle_name_de_testbundle_name_en_and_more.py  0009_rename_questionaire_questionnaire.py  0010_rename_questionaire_consultantquestion_questionnaire_and_more.py  0011_clientoption_text_for_consultant_and_more.py  0012_alter_clientquestion_format_and_more.py  0013_clientquestion_choices_consultantquestion_choices.py  0014_remove_clientquestion_choices_and_more.py  0015_clientanswer_visit_consultantanswer_visit.py  0016_visit_status.py  0017_visit_tags.py  0018_testresult_test.py  0019_alter_visit_status.py  0020_case_external_id.py  0021_testresultoption_color.py  0022_alter_test_visit_alter_testresultoption_color.py  0023_test_user_test_unique_test_per_visit_and_kind.py  0024_alter_clientquestion_format_and_more.py  0025_alter_case_id_alter_client_id.py  0026_section_label.py  0027_token_case_token_disabled.py  0028_case_key.py  0029_alter_clientanswer_texts_and_more.py  0030_resultinformation_visitdocument_visitlog_visitnote.py  0031_alter_visitdocument_options_alter_visitnote_options_and_more.py  0032_resultinformation_information_text_de_and_more.py  0033_historicalquestionnaire_name_de_and_more.py  0034_historicalclientoption_text_de_and_more.py  0035_historicalvisit_published_at_visit_published_at_and_more.py  0036_alter_historicalvisit_status_alter_visit_status_and_more.py  0037_visitexport_progress_visitexport_total_visits.py  0038_clientquestion_extra_for_centers_and_more.py  0038_question_use_textarea.py  0039_clientoption_choices_de_clientoption_choices_en_and_more.py  (+12 more)
sure/tests/: __init__.py  test_case_management_test.py  test_questionnaires.py  test_tests.py
templates/: 403.html  404.html  500.html  error.html  index.html
tenants/: account.py  admin.py  api.py  apps.py  auth.py  forms.py  models.py  schema.py  tasks.py  translation.py  views.py
tenants/migrations/: 0001_initial.py  0002_consultant_delete_counselor.py  0003_consultant_locations.py  0004_tag.py  0005_tenant_invitation_mail_subject_and_more.py  0006_alter_consultant_options_alter_location_options_and_more.py  0007_location_address_location_opening_hours_tenant_logo.py  0008_location_excluded_questions.py  0009_alter_location_excluded_questions.py  0010_historicalconsultant_historicallocation_and_more.py  0011_historicaluser.py  0012_historicallocation_phone_number_and_more.py  0013_location_included_questions.py  0014_alter_historicallocation_opening_hours_and_more.py  0015_informationbanner_content_de_and_more.py  0016_alter_historicalinformationbanner_content_and_more.py  0017_alter_historicaltenant_logo_alter_tenant_logo.py  0018_apitoken.py  0019_alter_historicalinformationbanner_content_and_more.py  0020_consultant_inactive_historicalconsultant_inactive_and_more.py  0021_alter_historicaltenant_invitation_mail_template_and_more.py  0022_historicallocation_reminder_text_and_more.py  0023_location_reminder_text_de_location_reminder_text_en_and_more.py  0025_advertisement.py  (+3 more)
texts/: admin.py  api.py  models.py  tasks.py  translate.py  translation.py  views.py
(+112 files in other folders)
