[project]
name = "sure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair>=5.5.0",
  "celery[redis]>=5.5.3",
  "dataclasses-json>=0.6.7",
  "django>=5.2.6",
  "django-celery-beat>=2.8.1",
  "django-celery-results>=2.6.0",
  "django-cors-headers>=4.8.0",
  "django-debug-toolbar>=6.0.0",
  "django-environ>=0.12.0",
  "django-model-utils>=5.0.0",
  "django-ninja>=1.4.3",
  "django-vite>=3.1.0",
  "gunicorn>=23.0.0",
  "polars>=1.33.1",
  "psycopg2-binary>=2.9.10",
  "whitenoise>=6.10.0",
]

[dependency-groups]
dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8.6",
  "black>=25.1.0",
  "celery-types>=0.23.0",
  "django-stubs>=5.2.3",
  "isort>=6.0.1",
  "joblib-stubs>=1.5.2.0.20250831",
  "mypy>=1.18.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
